src/objects/ints__EfxReport_FraudWarning__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport FraudWarnings</relationshipLabel>
        <relationshipName>EfxReport_FraudWarnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <description>description to the corresponding productId.</description>
        <label>description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__productId__c</fullName>
        <label>productId</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport FraudWarning</label>
    <nameField>
        <displayFormat>EFX-FRAUD-WARN-{0000000000}</displayFormat>
        <label>EfxReport FraudWarning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport FraudWarnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>